tests/spec/emit/snapshots/unit_call_in_slice_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn test() {
    let mut xs: Slice<()> = []
    xs.append(noop())
  }
---
package main

func noop() {}

func test() {
	xs := []struct{}{}
	noop()
	_ = append(xs[:len(xs):len(xs)], struct{}{})
}
