tests/spec/emit/snapshots/unit_call_in_tuple_struct_constructor.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn noop() {}
  struct P((), int)
  
  fn test() -> P {
    P(noop(), 1)
  }
---
package main

func noop() {}

type P struct {
	F0 struct{}
	F1 int
}

func test() P {
	noop()
	return P{
		F0: struct{}{},
		F1: 1,
	}
}
