tests/spec/emit/snapshots/unit_call_in_ufcs_method_arg.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn noop() {}
  
  struct Box {}
  
  impl Box {
    fn ping(self, _x: ()) {}
  }
  
  fn test() {
    let b = Box {}
    Box.ping(b, noop())
  }
---
package main

func noop() {}

type Box struct{}

func (b Box) ping(_ struct{}) {}

func test() {
	b := Box{}
	noop()
	b.ping(struct{}{})
}
