tests/spec/emit/snapshots/unit_return_early.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(flag: bool) -> () {
    if flag {
      return ()
    }
    let x = 10;
    ()
  }
---
package main

func test(flag bool) {
	if flag {
		return
	}
}
