tests/spec/emit/snapshots/unit_return_explicit.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test() -> () {\n  let x = 42;\n  return ()\n}\n"
---
package main

func test() {
	return
}
