tests/spec/emit/snapshots/unit_returning_map_delete_in_tuple.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut m = Map.new<string, int>()
    m["a"] = 1
    let t = (m.delete("a"), 1)
    let _ = t.1
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	m := make(map[string]int)
	m["a"] = 1
	delete(m, "a")
	t := lisette.MakeTuple2[struct{}, int](struct{}{}, 1)
	_ = t.Second
}
