tests/spec/emit/snapshots/unknown_return_in_alias_emits_any.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Cb = fn() -> Unknown;
---
package main

type Cb func() any
