tests/spec/emit/snapshots/unknown_return_in_callback_param_emits_any.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn run(callback: fn() -> Unknown) {}
---
package main

func run(_ func() any) {}
