tests/spec/emit/snapshots/unknown_return_in_struct_field_emits_any.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Bag {
    pub callback: fn() -> Unknown,
  }
---
package main

type Bag struct {
	Callback func() any
}
